kubeflow-deployments/private-blueprint/.build/kubeflow-apps/networking.istio.io_v1alpha3_virtualservice_ml-pipeline-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /pipeline
    rewrite:
      uri: /pipeline
    route:
    - destination:
        port:
          number: 80
        host: ml-pipeline-ui.kubeflow.svc.cluster.local
    timeout: 300s
